# ic-basilisk-os

./: .bumpversion.cfg  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_linters.sh  setup.cfg  setup.py
.github/workflows/: deploy-template.yml  deploy-tip-jar.yml  deploy-website.yml  lint.yml  publish.yml  test-ic.yml  test.yml
docs/: SCHEMA_UPGRADE_CHECKING.md
ic_basilisk_os/: __init__.py  cli.py  crypto.py  entities.py  sftp.py  sshd.py  status.py  tokens.py  vetkeys.py  wallet.py
ic_basilisk_toolkit/: __init__.py  check_upgrade.py  cli.py  crypto.py  date_utils.py  deployer.py  entities.py  execution.py  fx.py  prng.py  realm.py  sftp.py  shell.py  sshd.py  status.py  task_manager.py  tokens.py  vetkeys.py  wallet.py
templates/file_registry/: .gitignore  dfx.json  ic_file_registry.did
templates/file_registry/frontend/: package-lock.json  package.json  tailwind.config.js
templates/file_registry/frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
templates/file_registry/frontend/.svelte-kit/output/client/.vite/: manifest.json
templates/file_registry/frontend/.svelte-kit/output/client/_app/: version.json
templates/file_registry/frontend/.svelte-kit/output/server/: index.js  manifest-full.js
templates/file_registry/frontend/.svelte-kit/output/server/.vite/: manifest.json
templates/file_registry/frontend/.svelte-kit/output/server/chunks/: api.js  auth.js  index.js  internal.js  renderer.js  root.js  toast.js
templates/file_registry/frontend/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
templates/file_registry/frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
templates/file_registry/frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js
templates/file_registry/frontend/.svelte-kit/types/: route_meta_data.json
templates/file_registry/frontend/.svelte-kit/types/src/routes/: $types.d.ts
templates/file_registry/frontend/src/: app.css
templates/file_registry/frontend/src/lib/: api.ts  auth.ts  declarations.ts
templates/file_registry/frontend/src/lib/components/: ConfirmModal.svelte  FileViewer.svelte  Toast.svelte  VersionTimeline.svelte
templates/file_registry/frontend/src/lib/stores/: toast.ts
templates/file_registry/frontend/src/routes/: +layout.svelte  +page.svelte
templates/file_registry/frontend/src/routes/[namespace]/: +page.svelte
templates/file_registry/frontend/src/routes/[namespace]/[...path]/: +page.svelte
templates/file_registry/src/: main.py
templates/tip_jar/: README.md  canister_ids.json  dfx.json  tip_jar_backend.did
templates/tip_jar/src/backend/: endpoints.py  main.py  models.py  services.py  tip_jar_backend.did
templates/tip_jar/src/frontend/assets/: .ic-assets.json5  app.js  index.html  style.css
templates/tip_jar/src/frontend/assets/.well-known/: ic-domains
tests/: conftest.py  test_check_upgrade.py  test_crypto.py  test_date_utils.py  test_db_shell.py  test_filesystem.py  test_fx.py  test_guards.py  test_prng.py  test_sftp.py  test_shell.py  test_tasks.py  test_vetkeys.py  test_wallet.py  test_wallet_hook.py  test_wallet_shell.py
tests/test_canister/: .gitignore  canister_ids.json  dfx.json
tests/test_canister/src/: main.py
website/: README.md  canister_ids.json  dfx.json
website/src/assets/: .ic-assets.json5  index.html  style.css
(+24 files in other folders)
